# Software_Engineering_Experiment

./: .aws  .azure  .bash_history  .gitconfig  .gitignore  CMakeLists.txt  README.md  build.sh  设计书.md
.docker/: .token_seed  contexts  features.json
.docker/buildx/: .buildNodeID
.docker/buildx/activity/: default
.docker/buildx/refs/default/default/: jyhxqsguek2txwdfpgm8xl6jl
.dotnet/corefx/cryptography/crls/: 75d1b2ed.de05bb98.crl  bd6662f5.8ba5d856.crl  cf887acb.0f995861.crl  d16da424.cbeb964c.crl
.local/share/CMakeTools/: cmake-tools-kits.json  log.txt
backup_restore_project/: Dockerfile  build.sh
backup_restore_project/cpp_src/: CMakeLists.txt  README.md  main.cpp
backup_restore_project/cpp_src/core/: backup.cpp  backup.h  file_utils.cpp  file_utils.h  repository.cpp  repository.h  restore.h
backup_restore_project/cpp_src/filters/: file_type_filter.cpp  file_type_filter.h  filter_base.cpp  filter_base.h  filter_chain.cpp  filter_chain.h  name_filter.cpp  name_filter.h  size_filter.cpp  size_filter.h  time_filter.cpp  time_filter.h
backup_restore_project/cpp_src/gui/: gui_interface.cpp  gui_interface.h
backup_restore_project/cpp_src/metadata/: filesystem.cpp  filesystem.h  metadata.cpp
backup_restore_project/cpp_src/storage/: compressor.h  encryptor.cpp  pack_store.h
backup_restore_project/cpp_src/storage/package/: algorithms.h  binary_io.h  compress_rle.cpp  encrypt_rc4.cpp  encrypt_rc4.h  encrypt_xor.h  package_export.cpp
backup_restore_project/python/: netdisk.py  netdisk_gui.py  run_tests.py  test_metadata.py
backup_restore_project/python/home/xiaowangzi/pkg_tests/imported/repo_header_none_none/: repo_toc_none_none.pkg
pkg_tests/imported/repo_toc_none_none/: repo_header_none_none.pkg
score_test/: index.txt
score_test/repo/: index.txt
src/: main.cpp
src/core/: backup.cpp  file_utils.cpp  repository.cpp  restore.cpp
src/filters/: path_filter.cpp  path_filter.h  user_filter.cpp  user_filter.h
src/metadata/: filesystem.cpp  metadata.cpp  metadata.h
src/storage/: compressor.cpp  encryptor.h  pack_store.cpp
src/storage/package/: compress_rle.h  encrypt_xor.cpp  pack_header.cpp  pack_header.h  pack_toc.cpp  pack_toc.h  package_export.h
test/repo/: index.txt
